--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
-        "reliese/laravel": "^0.0.13"
+        "tymon/jwt-auth": "1.0.0-rc.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -19,6 +18,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0",
+        "reliese/laravel": "^0.0.13",
         "xethron/migrations-generator": "^2.0"
     },
     "autoload": {
