various improvements, seed test users, permissions are environmennt variables for now

--- a/.env_local
+++ b/.env_local
@@ -39,3 +39,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=Hnof2oJxTMn8EeJkZPGepPIH00v7yQ4E
+
+ADMIN_PERMISSIONS=0
+MENTOR_PERMISSIONS=1
+MENTEE_PERMISSIONS=2
