--- a/.env_production
+++ b/.env_production
@@ -1,7 +1,7 @@
 APP_NAME=IWNAD
 APP_ENV=production
 APP_KEY=base64:XerXP1QkLx+Sgn/AO25LS+u/N3lPmlFi2mcaesjLZpE=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -39,3 +39,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=Hnof2oJxTMn8EeJkZPGepPIH00v7yQ4E
+
+ADMIN_PERMISSIONS=0
+MENTOR_PERMISSIONS=1
+MENTEE_PERMISSIONS=2
